[build-system]
requires = ["flit_core >=2,<3"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "onedriver"
requires = [
    "requests",
    "bottle",
]
author = "Mikael Honkala"
author-email = "mikael.honkala@gmail.com"
home-page = "https://github.com/mikaelho/onedriver"
description-file = "README.md"
license = "TheUnlicense"

